lib/janet.h


typedef struct JanetGCObject JanetGCObject;
typedef struct JanetFunction JanetFunction;
typedef struct JanetArray JanetArray;
typedef struct JanetBuffer JanetBuffer;
typedef struct JanetTable JanetTable;
typedef struct JanetFiber JanetFiber;
typedef struct JanetFuncDef JanetFuncDef;
typedef struct JanetFuncEnv JanetFuncEnv;
typedef struct JanetKV JanetKV;
typedef struct JanetAbstractType JanetAbstractType;
typedef struct JanetView JanetView;
typedef struct JanetByteView JanetByteView;
typedef struct JanetDictView JanetDictView;
typedef struct JanetRange JanetRange;
typedef enum JanetType {
  JANET_NUMBER,
  JANET_NIL,
  JANET_BOOLEAN,
  JANET_FIBER,
  JANET_STRING,
  JANET_SYMBOL,
  JANET_KEYWORD,
  JANET_ARRAY,
  JANET_TUPLE,
  JANET_TABLE,
  JANET_STRUCT,
  JANET_BUFFER,
  JANET_FUNCTION,
  JANET_CFUNCTION,
  JANET_ABSTRACT,
  JANET_POINTER
} JanetType;
typedef union Janet Janet;
union Janet {
  uint64_t u64;
  int64_t i64;
  double number;
  void *pointer;
};
typedef union Janet Janet;
union Janet {
  struct {
#ifdef JANET_BIG_ENDIAN
    uint32_t type;
    union {
      int32_t integer;
      void *pointer;
    } payload;
#else
    union {
      int32_t integer;
      void *pointer;
    } payload;
    uint32_t type;
#endif
  } tagged;
  double number;
  uint64_t u64;
};
typedef struct Janet Janet;
struct Janet {
  union {
    uint64_t u64;
    double number;
    int32_t integer;
    void *pointer;
    const void *cpointer;
  } as;
  JanetType type;
};
typedef Janet (*JanetCFunction)(int32_t argc, Janet *argv);
typedef const uint8_t *JanetString;
typedef const uint8_t *JanetSymbol;
typedef const uint8_t *JanetKeyword;
typedef const Janet *JanetTuple;
typedef const JanetKV *JanetStruct;
typedef void *JanetAbstract;
typedef struct JanetStream JanetStream;
struct JanetStream {
  JanetHandle handle;
  uint32_t flags;
  uint32_t index;
  JanetFiber *read_fiber;
  JanetFiber *write_fiber;
  const void *methods; 
};
typedef void (*JanetEVCallback)(JanetFiber *fiber, JanetAsyncEvent event);
struct JanetGCObject {
  int32_t flags;
  union {
    JanetGCObject *next;
    volatile JanetAtomicInt refcount; 
  } data;
};
struct JanetFiber {
  JanetGCObject gc;   
  int32_t flags;      
  int32_t frame;      
  int32_t stackstart; 
  int32_t stacktop; 
  int32_t capacity; 
  int32_t maxstack; 
  JanetTable *env;  
  Janet *data;      
  JanetFiber
      *child; 
  Janet last_value; 
#ifdef JANET_EV
  uint32_t sched_id; 
  JanetEVCallback ev_callback; 
  JanetStream *ev_stream;      
  void *ev_state; 
  void *supervisor_channel; 
#endif
};
struct JanetArray {
  JanetGCObject gc;
  int32_t count;
  int32_t capacity;
  Janet *data;
};
struct JanetBuffer {
  JanetGCObject gc;
  int32_t count;
  int32_t capacity;
  uint8_t *data;
};
struct JanetTable {
  JanetGCObject gc;
  int32_t count;
  int32_t capacity;
  int32_t deleted;
  JanetKV *data;
  JanetTable *proto;
};
struct JanetKV {
  Janet key;
  Janet value;
};
struct JanetFuncDef {
  JanetGCObject gc;
  int32_t *environments; 
  Janet *constants;
  JanetFuncDef **defs;
  uint32_t *bytecode;
  uint32_t *closure_bitset; 
  JanetSourceMapping *sourcemap;
  JanetString source;
  JanetString name;
  JanetSymbolMap *symbolmap;
  int32_t flags;
  int32_t slotcount; 
  int32_t arity;     
  int32_t min_arity; 
  int32_t max_arity; 
  int32_t constants_length;
  int32_t bytecode_length;
  int32_t environments_length;
  int32_t defs_length;
  int32_t symbolmap_length;
};
struct JanetFuncEnv {
  JanetGCObject gc;
  union {
    JanetFiber *fiber;
    Janet *values;
  } as;
  int32_t length; 
  int32_t offset; 
};
struct JanetFunction {
  JanetGCObject gc;
  JanetFuncDef *def;
  JanetFuncEnv *envs[];
};
typedef struct {
  void *m_state;
  void *u_state;
  int flags;
  const uint8_t *data;
  const JanetAbstractType *at;
} JanetMarshalContext;
struct JanetAbstractType {
  const char *name;
  int (*gc)(void *data, size_t len);
  int (*gcmark)(void *data, size_t len);
  int (*get)(void *data, Janet key, Janet *out);
  void (*put)(void *data, Janet key, Janet value);
  void (*marshal)(void *p, JanetMarshalContext *ctx);
  void *(*unmarshal)(JanetMarshalContext *ctx);
  void (*tostring)(void *p, JanetBuffer *buffer);
  int (*compare)(void *lhs, void *rhs);
  int32_t (*hash)(void *p, size_t len);
  Janet (*next)(void *p, Janet key);
  Janet (*call)(void *p, int32_t argc, Janet *argv);
  size_t (*length)(void *p, size_t len);
  JanetByteView (*bytes)(void *p, size_t len);
};
struct JanetView {
  const Janet *items;
  int32_t len;
};
struct JanetByteView {
  const uint8_t *bytes;
  int32_t len;
};
struct JanetDictView {
  const JanetKV *kvs;
  int32_t len;
  int32_t cap;
};
struct JanetRange {
  int32_t start;
  int32_t end;
};
typedef struct JanetFile JanetFile;
struct JanetFile {
  FILE *file;
  int32_t flags;
};
JANET_API uint64_t janet_getuinteger64(const Janet *argv, int32_t n);
JANET_API size_t janet_getsize(const Janet *argv, int32_t n);
JANET_API JanetView janet_getindexed(const Janet *argv, int32_t n);
JANET_API JanetByteView janet_getbytes(const Janet *argv, int32_t n);
JANET_API JanetDictView janet_getdictionary(const Janet *argv, int32_t n);
JANET_API void *janet_getabstract(const Janet *argv, int32_t n,
                                  const JanetAbstractType *at);
JANET_API JanetRange janet_getslice(int32_t argc, const Janet *argv);
JANET_API int32_t janet_gethalfrange(const Janet *argv, int32_t n,
                                     int32_t length, const char *which);
JANET_API int32_t janet_getstartrange(const Janet *argv, int32_t argc,
                                      int32_t n, int32_t length);
JANET_API int32_t janet_getendrange(const Janet *argv, int32_t argc, int32_t n,
                                    int32_t length);
JANET_API int32_t janet_getargindex(const Janet *argv, int32_t n,
                                    int32_t length, const char *which);
JANET_API uint64_t janet_getflags(const Janet *argv, int32_t n,
                                  const char *flags);
JANET_API double janet_optnumber(const Janet *argv, int32_t argc, int32_t n,
                                 double dflt);
JANET_API JanetTuple janet_opttuple(const Janet *argv, int32_t argc, int32_t n,
                                    JanetTuple dflt);
JANET_API JanetStruct janet_optstruct(const Janet *argv, int32_t argc,
                                      int32_t n, JanetStruct dflt);
JANET_API JanetString janet_optstring(const Janet *argv, int32_t argc,
                                      int32_t n, JanetString dflt);
JANET_API const char *janet_optcstring(const Janet *argv, int32_t argc,
                                       int32_t n, const char *dflt);
JANET_API const char *janet_optcbytes(const Janet *argv, int32_t argc,
                                      int32_t n, const char *dflt);
JANET_API JanetSymbol janet_optsymbol(const Janet *argv, int32_t argc,
                                      int32_t n, JanetString dflt);
JANET_API JanetKeyword janet_optkeyword(const Janet *argv, int32_t argc,
                                        int32_t n, JanetString dflt);
JANET_API JanetFiber *janet_optfiber(const Janet *argv, int32_t argc, int32_t n,
                                     JanetFiber *dflt);
JANET_API JanetFunction *janet_optfunction(const Janet *argv, int32_t argc,
                                           int32_t n, JanetFunction *dflt);
JANET_API JanetCFunction janet_optcfunction(const Janet *argv, int32_t argc,
                                            int32_t n, JanetCFunction dflt);
JANET_API int janet_optboolean(const Janet *argv, int32_t argc, int32_t n,
                               int dflt);
JANET_API void *janet_optpointer(const Janet *argv, int32_t argc, int32_t n,
                                 void *dflt);
JANET_API int32_t janet_optnat(const Janet *argv, int32_t argc, int32_t n,
                               int32_t dflt);
JANET_API int32_t janet_optinteger(const Janet *argv, int32_t argc, int32_t n,
                                   int32_t dflt);
JANET_API int64_t janet_optinteger64(const Janet *argv, int32_t argc, int32_t n,
                                     int64_t dflt);
JANET_API size_t janet_optsize(const Janet *argv, int32_t argc, int32_t n,
                               size_t dflt);
JANET_API JanetAbstract janet_optabstract(const Janet *argv, int32_t argc,
                                          int32_t n,
                                          const JanetAbstractType *at,
                                          JanetAbstract dflt);
JANET_API JanetBuffer *janet_optbuffer(const Janet *argv, int32_t argc,
                                       int32_t n, int32_t dflt_len);
JANET_API JanetTable *janet_opttable(const Janet *argv, int32_t argc, int32_t n,
                                     int32_t dflt_len);
JANET_API JanetArray *janet_optarray(const Janet *argv, int32_t argc, int32_t n,
                                     int32_t dflt_len);
JANET_API Janet janet_dyn(const char *name);
JANET_API void janet_setdyn(const char *name, Janet value);
extern JANET_API const JanetAbstractType janet_file_type;
JANET_API Janet janet_makefile(FILE *f, int32_t flags);
JANET_API JanetFile *janet_makejfile(FILE *f, int32_t flags);
JANET_API FILE *janet_getfile(const Janet *argv, int32_t n, int32_t *flags);
JANET_API FILE *janet_dynfile(const char *name, FILE *def);
JANET_API JanetFile *janet_getjfile(const Janet *argv, int32_t n);
JANET_API JanetAbstract janet_checkfile(Janet j);
JANET_API FILE *janet_unwrapfile(Janet j, int32_t *flags);
JANET_API int janet_file_close(JanetFile *file);
JANET_API int janet_cryptorand(uint8_t *out, size_t n);
JANET_API void janet_marshal_size(JanetMarshalContext *ctx, size_t value);
JANET_API void janet_marshal_int(JanetMarshalContext *ctx, int32_t value);
JANET_API void janet_marshal_int64(JanetMarshalContext *ctx, int64_t value);
JANET_API void janet_marshal_ptr(JanetMarshalContext *ctx, const void *value);
JANET_API void janet_marshal_byte(JanetMarshalContext *ctx, uint8_t value);
JANET_API void janet_marshal_bytes(JanetMarshalContext *ctx,
                                   const uint8_t *bytes, size_t len);
JANET_API void janet_marshal_janet(JanetMarshalContext *ctx, Janet x);
JANET_API void janet_marshal_abstract(JanetMarshalContext *ctx,
                                      JanetAbstract abstract);
JANET_API void janet_unmarshal_ensure(JanetMarshalContext *ctx, size_t size);
JANET_API size_t janet_unmarshal_size(JanetMarshalContext *ctx);
JANET_API int32_t janet_unmarshal_int(JanetMarshalContext *ctx);
JANET_API int64_t janet_unmarshal_int64(JanetMarshalContext *ctx);
JANET_API void *janet_unmarshal_ptr(JanetMarshalContext *ctx);
JANET_API uint8_t janet_unmarshal_byte(JanetMarshalContext *ctx);
JANET_API void janet_unmarshal_bytes(JanetMarshalContext *ctx, uint8_t *dest,
                                     size_t len);
JANET_API Janet janet_unmarshal_janet(JanetMarshalContext *ctx);
JANET_API JanetAbstract janet_unmarshal_abstract(JanetMarshalContext *ctx,
                                                 size_t size);
JANET_API JanetAbstract
janet_unmarshal_abstract_threaded(JanetMarshalContext *ctx, size_t size);
JANET_API void janet_unmarshal_abstract_reuse(JanetMarshalContext *ctx,
                                              void *p);
JANET_API void janet_register_abstract_type(const JanetAbstractType *at);
JANET_API const JanetAbstractType *janet_get_abstract_type(Janet key);
extern JANET_API const JanetAbstractType janet_peg_type;
typedef struct {
  uint32_t *bytecode;
  Janet *constants;
  size_t bytecode_len;
  uint32_t num_constants;
  int has_backref;
} JanetPeg;
extern JANET_API const JanetAbstractType janet_s64_type;
extern JANET_API const JanetAbstractType janet_u64_type;
typedef enum { JANET_INT_NONE, JANET_INT_S64, JANET_INT_U64 } JanetIntType;
JANET_API JanetIntType janet_is_int(Janet x);
JANET_API Janet janet_wrap_s64(int64_t x);
JANET_API Janet janet_wrap_u64(uint64_t x);
JANET_API int64_t janet_unwrap_s64(Janet x);
JANET_API uint64_t janet_unwrap_u64(Janet x);
JANET_API void *(janet_malloc)(size_t);
JANET_API void *(janet_realloc)(void *, size_t);
JANET_API void *(janet_calloc)(size_t, size_t);
JANET_API void(janet_free)(void *);
#define janet_malloc(X) malloc((X))
#define janet_realloc(X, Y) realloc((X), (Y))
#define janet_calloc(X, Y) calloc((X), (Y))
#define janet_free(X) free((X))