janet_bindings/src/bindings.rs

unsafe extern "C" {
    pub fn janet_getuinteger64(argv: *const Janet, n: i32) -> u64;
}
unsafe extern "C" {
    pub fn janet_getsize(argv: *const Janet, n: i32) -> usize;
}
unsafe extern "C" {
    pub fn janet_getindexed(argv: *const Janet, n: i32) -> JanetView;
}
unsafe extern "C" {
    pub fn janet_getbytes(argv: *const Janet, n: i32) -> JanetByteView;
}
unsafe extern "C" {
    pub fn janet_getdictionary(argv: *const Janet, n: i32) -> JanetDictView;
}
unsafe extern "C" {
    pub fn janet_getabstract(
        argv: *const Janet,
        n: i32,
        at: *const JanetAbstractType,
    ) -> *mut ::std::os::raw::c_void;
}
unsafe extern "C" {
    pub fn janet_getslice(argc: i32, argv: *const Janet) -> JanetRange;
}
unsafe extern "C" {
    pub fn janet_gethalfrange(
        argv: *const Janet,
        n: i32,
        length: i32,
        which: *const ::std::os::raw::c_char,
    ) -> i32;
}
unsafe extern "C" {
    pub fn janet_getstartrange(argv: *const Janet, argc: i32, n: i32, length: i32) -> i32;
}
unsafe extern "C" {
    pub fn janet_getendrange(argv: *const Janet, argc: i32, n: i32, length: i32) -> i32;
}
unsafe extern "C" {
    pub fn janet_getargindex(
        argv: *const Janet,
        n: i32,
        length: i32,
        which: *const ::std::os::raw::c_char,
    ) -> i32;
}
unsafe extern "C" {
    pub fn janet_getflags(argv: *const Janet, n: i32, flags: *const ::std::os::raw::c_char) -> u64;
}
unsafe extern "C" {
    pub fn janet_optnumber(argv: *const Janet, argc: i32, n: i32, dflt: f64) -> f64;
}
unsafe extern "C" {
    pub fn janet_opttuple(argv: *const Janet, argc: i32, n: i32, dflt: JanetTuple) -> JanetTuple;
}
unsafe extern "C" {
    pub fn janet_optstruct(argv: *const Janet, argc: i32, n: i32, dflt: JanetStruct)
    -> JanetStruct;
}
unsafe extern "C" {
    pub fn janet_optstring(argv: *const Janet, argc: i32, n: i32, dflt: JanetString)
    -> JanetString;
}
unsafe extern "C" {
    pub fn janet_optcstring(
        argv: *const Janet,
        argc: i32,
        n: i32,
        dflt: *const ::std::os::raw::c_char,
    ) -> *const ::std::os::raw::c_char;
}
unsafe extern "C" {
    pub fn janet_optcbytes(
        argv: *const Janet,
        argc: i32,
        n: i32,
        dflt: *const ::std::os::raw::c_char,
    ) -> *const ::std::os::raw::c_char;
}
unsafe extern "C" {
    pub fn janet_optsymbol(argv: *const Janet, argc: i32, n: i32, dflt: JanetString)
    -> JanetSymbol;
}
unsafe extern "C" {
    pub fn janet_optkeyword(
        argv: *const Janet,
        argc: i32,
        n: i32,
        dflt: JanetString,
    ) -> JanetKeyword;
}
unsafe extern "C" {
    pub fn janet_optfiber(
        argv: *const Janet,
        argc: i32,
        n: i32,
        dflt: *mut JanetFiber,
    ) -> *mut JanetFiber;
}
unsafe extern "C" {
    pub fn janet_optfunction(
        argv: *const Janet,
        argc: i32,
        n: i32,
        dflt: *mut JanetFunction,
    ) -> *mut JanetFunction;
}
unsafe extern "C" {
    pub fn janet_optcfunction(
        argv: *const Janet,
        argc: i32,
        n: i32,
        dflt: JanetCFunction,
    ) -> JanetCFunction;
}
unsafe extern "C" {
    pub fn janet_optboolean(
        argv: *const Janet,
        argc: i32,
        n: i32,
        dflt: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn janet_optpointer(
        argv: *const Janet,
        argc: i32,
        n: i32,
        dflt: *mut ::std::os::raw::c_void,
    ) -> *mut ::std::os::raw::c_void;
}
unsafe extern "C" {
    pub fn janet_optnat(argv: *const Janet, argc: i32, n: i32, dflt: i32) -> i32;
}
unsafe extern "C" {
    pub fn janet_optinteger(argv: *const Janet, argc: i32, n: i32, dflt: i32) -> i32;
}
unsafe extern "C" {
    pub fn janet_optinteger64(argv: *const Janet, argc: i32, n: i32, dflt: i64) -> i64;
}
unsafe extern "C" {
    pub fn janet_optsize(argv: *const Janet, argc: i32, n: i32, dflt: usize) -> usize;
}
unsafe extern "C" {
    pub fn janet_optabstract(
        argv: *const Janet,
        argc: i32,
        n: i32,
        at: *const JanetAbstractType,
        dflt: JanetAbstract,
    ) -> JanetAbstract;
}
unsafe extern "C" {
    pub fn janet_optbuffer(
        argv: *const Janet,
        argc: i32,
        n: i32,
        dflt_len: i32,
    ) -> *mut JanetBuffer;
}
unsafe extern "C" {
    pub fn janet_opttable(argv: *const Janet, argc: i32, n: i32, dflt_len: i32) -> *mut JanetTable;
}
unsafe extern "C" {
    pub fn janet_optarray(argv: *const Janet, argc: i32, n: i32, dflt_len: i32) -> *mut JanetArray;
}
unsafe extern "C" {
    pub fn janet_dyn(name: *const ::std::os::raw::c_char) -> Janet;
}
unsafe extern "C" {
    pub fn janet_setdyn(name: *const ::std::os::raw::c_char, value: Janet);
}
unsafe extern "C" {
    pub static janet_file_type: JanetAbstractType;
}
unsafe extern "C" {
    pub fn janet_makefile(f: *mut FILE, flags: i32) -> Janet;
}
unsafe extern "C" {
    pub fn janet_makejfile(f: *mut FILE, flags: i32) -> *mut JanetFile;
}
unsafe extern "C" {
    pub fn janet_getfile(argv: *const Janet, n: i32, flags: *mut i32) -> *mut FILE;
}
unsafe extern "C" {
    pub fn janet_dynfile(name: *const ::std::os::raw::c_char, def: *mut FILE) -> *mut FILE;
}
unsafe extern "C" {
    pub fn janet_getjfile(argv: *const Janet, n: i32) -> *mut JanetFile;
}
unsafe extern "C" {
    pub fn janet_checkfile(j: Janet) -> JanetAbstract;
}
unsafe extern "C" {
    pub fn janet_unwrapfile(j: Janet, flags: *mut i32) -> *mut FILE;
}
unsafe extern "C" {
    pub fn janet_file_close(file: *mut JanetFile) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn janet_cryptorand(out: *mut u8, n: usize) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn janet_marshal_size(ctx: *mut JanetMarshalContext, value: usize);
}
unsafe extern "C" {
    pub fn janet_marshal_int(ctx: *mut JanetMarshalContext, value: i32);
}
unsafe extern "C" {
    pub fn janet_marshal_int64(ctx: *mut JanetMarshalContext, value: i64);
}
unsafe extern "C" {
    pub fn janet_marshal_ptr(ctx: *mut JanetMarshalContext, value: *const ::std::os::raw::c_void);
}
unsafe extern "C" {
    pub fn janet_marshal_byte(ctx: *mut JanetMarshalContext, value: u8);
}
unsafe extern "C" {
    pub fn janet_marshal_bytes(ctx: *mut JanetMarshalContext, bytes: *const u8, len: usize);
}
unsafe extern "C" {
    pub fn janet_marshal_janet(ctx: *mut JanetMarshalContext, x: Janet);
}
unsafe extern "C" {
    pub fn janet_marshal_abstract(ctx: *mut JanetMarshalContext, abstract_: JanetAbstract);
}
unsafe extern "C" {
    pub fn janet_unmarshal_ensure(ctx: *mut JanetMarshalContext, size: usize);
}
unsafe extern "C" {
    pub fn janet_unmarshal_size(ctx: *mut JanetMarshalContext) -> usize;
}
unsafe extern "C" {
    pub fn janet_unmarshal_int(ctx: *mut JanetMarshalContext) -> i32;
}
unsafe extern "C" {
    pub fn janet_unmarshal_int64(ctx: *mut JanetMarshalContext) -> i64;
}
unsafe extern "C" {
    pub fn janet_unmarshal_ptr(ctx: *mut JanetMarshalContext) -> *mut ::std::os::raw::c_void;
}
unsafe extern "C" {
    pub fn janet_unmarshal_byte(ctx: *mut JanetMarshalContext) -> u8;
}
unsafe extern "C" {
    pub fn janet_unmarshal_bytes(ctx: *mut JanetMarshalContext, dest: *mut u8, len: usize);
}
unsafe extern "C" {
    pub fn janet_unmarshal_janet(ctx: *mut JanetMarshalContext) -> Janet;
}
unsafe extern "C" {
    pub fn janet_unmarshal_abstract(ctx: *mut JanetMarshalContext, size: usize) -> JanetAbstract;
}
unsafe extern "C" {
    pub fn janet_unmarshal_abstract_threaded(
        ctx: *mut JanetMarshalContext,
        size: usize,
    ) -> JanetAbstract;
}
unsafe extern "C" {
    pub fn janet_unmarshal_abstract_reuse(
        ctx: *mut JanetMarshalContext,
        p: *mut ::std::os::raw::c_void,
    );
}
unsafe extern "C" {
    pub fn janet_register_abstract_type(at: *const JanetAbstractType);
}
unsafe extern "C" {
    pub fn janet_get_abstract_type(key: Janet) -> *const JanetAbstractType;
}
unsafe extern "C" {
    pub static janet_peg_type: JanetAbstractType;
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct JanetPeg {
    pub bytecode: *mut u32,
    pub constants: *mut Janet,
    pub bytecode_len: usize,
    pub num_constants: u32,
    pub has_backref: ::std::os::raw::c_int,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of JanetPeg"][::std::mem::size_of::<JanetPeg>() - 32usize];
    ["Alignment of JanetPeg"][::std::mem::align_of::<JanetPeg>() - 8usize];
    ["Offset of field: JanetPeg::bytecode"][::std::mem::offset_of!(JanetPeg, bytecode) - 0usize];
    ["Offset of field: JanetPeg::constants"][::std::mem::offset_of!(JanetPeg, constants) - 8usize];
    ["Offset of field: JanetPeg::bytecode_len"]
        [::std::mem::offset_of!(JanetPeg, bytecode_len) - 16usize];
    ["Offset of field: JanetPeg::num_constants"]
        [::std::mem::offset_of!(JanetPeg, num_constants) - 24usize];
    ["Offset of field: JanetPeg::has_backref"]
        [::std::mem::offset_of!(JanetPeg, has_backref) - 28usize];
};
unsafe extern "C" {
    pub static janet_s64_type: JanetAbstractType;
}
unsafe extern "C" {
    pub static janet_u64_type: JanetAbstractType;
}
pub type JanetIntType = ::std::os::raw::c_uint;
unsafe extern "C" {
    pub fn janet_is_int(x: Janet) -> JanetIntType;
}
unsafe extern "C" {
    pub fn janet_wrap_s64(x: i64) -> Janet;
}
unsafe extern "C" {
    pub fn janet_wrap_u64(x: u64) -> Janet;
}
unsafe extern "C" {
    pub fn janet_unwrap_s64(x: Janet) -> i64;
}
unsafe extern "C" {
    pub fn janet_unwrap_u64(x: Janet) -> u64;
}
unsafe extern "C" {
    pub fn janet_malloc(arg1: usize) -> *mut ::std::os::raw::c_void;
}
unsafe extern "C" {
    pub fn janet_realloc(
        arg1: *mut ::std::os::raw::c_void,
        arg2: usize,
    ) -> *mut ::std::os::raw::c_void;
}
unsafe extern "C" {
    pub fn janet_calloc(arg1: usize, arg2: usize) -> *mut ::std::os::raw::c_void;
}
unsafe extern "C" {
    pub fn janet_free(arg1: *mut ::std::os::raw::c_void);
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct __locale_data {
    pub _address: u8,
}
pub type __builtin_va_list = [__va_list_tag; 1usize];
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct __va_list_tag {
    pub gp_offset: ::std::os::raw::c_uint,
    pub fp_offset: ::std::os::raw::c_uint,
    pub overflow_arg_area: *mut ::std::os::raw::c_void,
    pub reg_save_area: *mut ::std::os::raw::c_void,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of __va_list_tag"][::std::mem::size_of::<__va_list_tag>() - 24usize];
    ["Alignment of __va_list_tag"][::std::mem::align_of::<__va_list_tag>() - 8usize];
    ["Offset of field: __va_list_tag::gp_offset"]
        [::std::mem::offset_of!(__va_list_tag, gp_offset) - 0usize];
    ["Offset of field: __va_list_tag::fp_offset"]
        [::std::mem::offset_of!(__va_list_tag, fp_offset) - 4usize];
    ["Offset of field: __va_list_tag::overflow_arg_area"]
        [::std::mem::offset_of!(__va_list_tag, overflow_arg_area) - 8usize];
    ["Offset of field: __va_list_tag::reg_save_area"]
        [::std::mem::offset_of!(__va_list_tag, reg_save_area) - 16usize];
};
